REFACTOR: restaurant voucher apply type all for food, additional food, cart item